# VaporGit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  index.html  lefthook.yml  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
README/: README.ar.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh-CN.md  README.zh-TW.md
doc/: plan.md
public/: splashscreen.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  remote_url.rs  terminal.rs
src-tauri/src/commands/: branch.rs  commit.rs  diff.rs  git_ext.rs  gitee.rs  github.rs  merge.rs  mod.rs  remote.rs  repo.rs  splashscreen.rs  stage.rs  stash.rs  tag.rs  terminal.rs  tutorial.rs
src-tauri/src/git/: branch.rs  commit.rs  diff.rs  git_ext.rs  merge.rs  mod.rs  remote.rs  repo.rs  stage.rs  stash.rs  status.rs  tag.rs  validate.rs
src-tauri/src/gitee/: api.rs  auth.rs  mod.rs  pulls.rs  repos.rs
src-tauri/src/github/: api.rs  auth.rs  mod.rs  pulls.rs  repos.rs  update.rs
src-tauri/src/models/: branch.rs  commit.rs  conflict.rs  diff.rs  git_ext.rs  gitee.rs  github.rs  mod.rs  remote.rs  repo.rs  stash.rs  status.rs
src-tauri/src/oauth/: flow.rs  mod.rs  response.rs  token.rs
src-tauri/tests/: branch_test.rs  commit_test.rs  merge_test.rs  oauth_token_test.rs  remote_test.rs  repo_test.rs  stash_test.rs  status_test.rs  validate_test.rs
src-tauri/tests/common/: mod.rs
(+121 files in other folders)
