[package]
name = "VaporGit"
version = "1.1.3"
description = "A lite Git client built with Tauri and Rust"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
keyring = "3"
url = "2"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.3"
portable-pty = "0.9"
# download chunk streaming is provided by reqwest's "stream" feature

